# spec-vc

./: .gitignore  .spec-vc.toml  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude/: settings.json
commands/: adr-init.md  adr-link.md  adr-list.md  adr-new.md  adr-status.md  adr-upgrade.md
decision-vc/: SKILL.md
decision-vc/commands/: init.md  link.md  list.md  new.md  status.md  upgrade.md
decision-vc/hooks/: commit-msg  prepare-commit-msg
decision-vc/scripts/: check-refs.sh  new-adr.sh
decision-vc/templates/: commit-msg  seed-adr-000.md
decision-vc/tests/: e2e-init.sh
doc/: cli-refactor-design.md  preface.md
doc/arch/: README.md  adr-000.md  adr-001.md  adr-002.md  adr-003.md  adr-004.md  adr-005.md  adr-006.md  adr-007.md  adr-008.md  adr-009.md  adr-010.md  adr-011.md  adr-012.md  adr-013.md  adr-014.md  adr-015.md  adr-016.md  adr-017.md  adr-018.md  adr-019.md  adr-020.md  adr-021.md  adr-022.md
hooks/: commit-msg  prepare-commit-msg
scripts/: check-refs.sh  new-adr.sh
src/spec_vc/: _sections.py  adr.py  change.py  cli.py  commit.py  config.py  document_baseline.py  errors.py  gitops.py  hooks.py  index.py  lightweight.py  manifest.py  review.py  review_assistance.py  skill.py  spec.py  status.py  templates.py  verify.py
templates/: adr.md  behavior.feature  commit-msg  contract.openapi.yaml  dev-doc.md  index.md  schema.json  seed-adr-000.md
tests/: e2e-init.sh
tests/python/: test_change_subsystem.py  test_cli.py  test_commit.py  test_commit_prepare.py  test_commit_submit.py  test_manifest.py  test_review_assistance.py  (+2 more)
(+68 files in other folders)
